still solving img problems

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         class="navbar-brand mb-0 h1">
             <img 
             class="d-inline-block align-top"
-            src="images/diamond.WEBP" width="40" height="40">
+            src="./images/diamond.webp" width="40" height="40">
         Diamond Clinic
     </a>
     <button 
